--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@prisma/client": "^4.1.0",
     "babel-plugin-superjson-next": "^0.4.3",
+    "bcryptjs": "^2.4.3",
     "next": "12.2.2",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.3.0",
     "styled-components": "^5.3.5",
     "superjson": "^1.9.1"
   },
