--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 DATABASE_URL='mysql://hamfx0k7dbc0:pscale_pw_mal7_l42Y0EuuEsN-o5Zbo-BewKvIUUQFZ5abWbD8AQ@85lg2sqh1nwe.eu-central-1.psdb.cloud/festival?sslaccept=strict'
 SHADOW_DATABASE_URL='mysql://9pb1f8r2pfuz:pscale_pw_dirInyEi24_RA1_5wSl801SNfmD1h4WKm10aoAw2tIc@mg0zgcnya0lb.eu-central-1.psdb.cloud/festival?sslaccept=strict'
+
+
+# ID DE MESURE GA ANALYTICS
+NEXT_PUBLIC_GA_ID = G-5263X38XRG
