--- a/.env
+++ b/.env
@@ -5,5 +5,7 @@ SHADOW_DATABASE_URL='mysql://9pb1f8r2pfuz:pscale_pw_dirInyEi24_RA1_5wSl801SNfmD1
 # ID DE MESURE GA ANALYTICS
 NEXT_PUBLIC_GA_ID = G-5263X38XRG
 
-# Google tag Manager
-GTM_ID = GTM-TJLZS9J
+# Google Tag Manager
+GTM_ID = GTM-TJLZS9J	
+
+
