--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ SHADOW_DATABASE_URL='mysql://9pb1f8r2pfuz:pscale_pw_dirInyEi24_RA1_5wSl801SNfmD1
 NEXT_PUBLIC_GA_ID = G-5263X38XRG
 
 # Google Tag Manager
-GTM_ID = GTM-TJLZS9J	
+NEXT_PUBLIC_GOOGLE_TAG_MANAGER_ID = GTM-TJLZS9J	
 
 
