Add cloudinary and modify Profile

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DATABASE_URL='mysql://hamfx0k7dbc0:pscale_pw_mal7_l42Y0EuuEsN-o5Zbo-BewKvIUUQFZ5abWbD8AQ@85lg2sqh1nwe.eu-central-1.psdb.cloud/festival?sslaccept=strict'
-SHADOW_DATABASE_URL='mysql://9pb1f8r2pfuz:pscale_pw_dirInyEi24_RA1_5wSl801SNfmD1h4WKm10aoAw2tIc@mg0zgcnya0lb.eu-central-1.psdb.cloud/festival?sslaccept=strict'
+DATABASE_URL='mysql://dimdri79gfmb:pscale_pw_WQhnmOafpfsomkLor3LUxGKGBveosHJZjlAz2a7sMhk@chjj22nis9f9.eu-central-1.psdb.cloud/festiv-app?sslaccept=strict'
+SHADOW_DATABASE_URL='mysql://6ysal4bh9wxs:pscale_pw_KuG35aU51524juN2udzuAWw7fOBIQdgJHLBMy_fkXzk@4d71k7spboy6.eu-central-1.psdb.cloud/festiv-app?sslaccept=strict'
 
 
 # ID DE MESURE GA ANALYTICS
@@ -9,3 +9,8 @@ NEXT_PUBLIC_GA_ID = G-5263X38XRG
 NEXT_PUBLIC_GOOGLE_TAG_MANAGER_ID = GTM-TJLZS9J	
 
 
+# Cloudinary 
+
+CLOUD_NAME="doqiannkf"
+API_KEY="479197925865292"
+API_SECRET="sDaBp_PH4cMXmFesUwXTezZ_z54"
