--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "@prisma/client": "^4.1.0",
     "babel-plugin-superjson-next": "^0.4.3",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.25.0",
+    "formidable": "^2.0.1",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.3.0",
     "styled-components": "^5.3.5",
-    "superjson": "^1.9.1",
-    "cloudinary": "^1.25.0",
-    "formidable": "^1.2.2"
+    "superjson": "^1.9.1"
   },
   "devDependencies": {
     "eslint": "8.20.0",
