--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-  "build": "next build",
-  "start": "next start",
-  "lint": "next lint",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "postinstall": "prisma generate"
   },
   "dependencies": {
@@ -16,6 +16,7 @@
     "cloudinary": "^1.30.1",
     "formidable": "^2.0.1",
     "next": "12.2.2",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
