--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.30.1",
     "formidable": "^2.0.1",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.34",
     "next": "12.2.2",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.3.0",
+    "react-moment": "^1.1.2",
     "styled-components": "^5.3.5",
     "superjson": "^1.9.1"
   },
