--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ SHADOW_DATABASE_URL='mysql://6ysal4bh9wxs:pscale_pw_KuG35aU51524juN2udzuAWw7fOBI
 
 
 # ID DE MESURE GA ANALYTICS
-NEXT_PUBLIC_GA_ID = G-5263X38XRG
+NEXT_PUBLIC_GA_ID = G-W74J750QVJ
 
 # Google Tag Manager
 NEXT_PUBLIC_GOOGLE_TAG_MANAGER_ID = GTM-TJLZS9J	
