--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DATABASE_URL='mysql://dimdri79gfmb:pscale_pw_WQhnmOafpfsomkLor3LUxGKGBveosHJZjlAz2a7sMhk@chjj22nis9f9.eu-central-1.psdb.cloud/festiv-app?sslaccept=strict'
-SHADOW_DATABASE_URL='mysql://6ysal4bh9wxs:pscale_pw_KuG35aU51524juN2udzuAWw7fOBIQdgJHLBMy_fkXzk@4d71k7spboy6.eu-central-1.psdb.cloud/festiv-app?sslaccept=strict'
+DATABASE_URL='mysql://hyf50wn0pyzr:pscale_pw_HTtcypWIHM5_3fYvLieVsosIqbxuO39OefpAnnHrqbE@chjj22nis9f9.eu-central-1.psdb.cloud/festiv-app?sslaccept=strict'
+SHADOW_DATABASE_URL='mysql://yeuer90vezzf:pscale_pw_46yCjFhhGMbvb7cdrs1WTIX0iHoFpwAdXDRcs0nczVU@4d71k7spboy6.eu-central-1.psdb.cloud/festiv-app?sslaccept=strict'
 
 
 # ID DE MESURE GA ANALYTICS
